# LaViCon

./: README.md
src/dashboard/: CMakeLists.txt  package.xml
src/dashboard/include/dashboard/: IVelocityStrategy.h  dummy_filter.h  low_pass_filter.h  moving_average_filter.h  threshold_filter.h  velocity_calculator.h  velocity_context.h
src/dashboard/launch/: velocity_calculator.launch
src/dashboard/src/: dummy_filter.cpp  low_pass_filter.cpp  moving_average.cpp  threshold_filter.cpp  velocity_calculator.cpp  velocity_calculator_node.cpp  velocity_context.cpp
src/emergency_stop/: CMakeLists.txt  package.xml
src/emergency_stop/scripts/: emergency_stop_node.py
src/four_wheel/: CMakeLists.txt  README.md  package.xml
src/four_wheel/include/: four_wheel.h  four_wheel_binary.h  four_wheel_fsm.h  four_wheel_packages.h  four_wheel_serial_ports.h  four_wheel_time_interval.h  four_wheel_tinyfsm.hpp
src/four_wheel/launch/: four_wheel.launch
src/four_wheel/src/: four_wheel.cc  four_wheel_fsm.cc  four_wheel_packages.cc  four_wheel_serial_ports.cc
src/four_wheel_drive_msgs/: CMakeLists.txt  README.md  package.xml
src/four_wheel_drive_msgs/msg/: four_wheel_drive_base_msg.msg  four_wheel_drive_error_msg.msg  four_wheel_drive_fb_lr_msg.msg  four_wheel_drive_full_msg.msg  four_wheel_drive_state_msg.msg
src/four_wheel_msgs/: CMakeLists.txt  README.md  package.xml
src/four_wheel_msgs/msg/: four_wheel.msg  four_wheel_drive.msg  four_wheel_drive_error.msg  four_wheel_drive_fb.msg  four_wheel_drive_fb_lr.msg  four_wheel_drive_state.msg  four_wheel_error.msg  four_wheel_param.msg
src/four_wheel_pt_msgs/: CMakeLists.txt  README.md  package.xml
src/four_wheel_pt_msgs/msg/: four_wheel_pt_msg.msg
src/pure_pursuit/: CMakeLists.txt  package.xml
src/pure_pursuit/launch/: pure_pursuit_node.launch  pure_pursuit_node_bak.launch
src/pure_pursuit/src/: pure_pursuit.cpp  pure_pursuit_bak.cpp  pure_pursuit_bak2.cpp
src/velocity_commands_manager/: CMakeLists.txt  package.xml
src/velocity_commands_manager/include/velocity_commands_manager/: velocity_commands_player.h  velocity_commands_recorder.h
src/velocity_commands_manager/launch/: player.launch  recorder.launch
src/velocity_commands_manager/src/: velocity_commands_player.cpp  velocity_commands_player_node.cpp  velocity_commands_recorder.cpp  velocity_commands_recorder_node.cpp
src/velocity_commands_manager/velocity_commands_files/: cmdvel-2024-10-18-15-12-44.csv  cmdvel-2024-10-18-15-56-34.csv  cmdvel-2024-10-18-16-26-13.csv  cmdvel-2024-10-21-17-24-18.csv  cmdvel-2024-10-22-13-59-41.csv  cmdvel-default.csv
src/vocar/: CMakeLists.txt  package.xml  test.py
src/vocar/launch/: start.launch
src/vocar/scripts/: bak_voice_parse.py  control_center.py  gpt.py  gpt2.py  latency_logs.txt  latency_records.txt  localization.py  mapping.py  object_detection.py  planning.py  temp  test.py  tts.py  voice_parse.py  voice_parse2.py  voice_parse3.py  voice_parse4.py  voice_parse5.py  voice_recognition.py
src/vocar/srv/: ShortestPath.srv
src/yolov8_node/: CMakeLists.txt  package.xml
src/yolov8_node/scripts/: object_detection.py
