<?xml version="1.0"?>
<package format="2">
  <name>four_wheel</name>
  <version>1.0.0</version>
  <description>The four_wheel package</description>

  <maintainer email="zhz@zkwl.com">zhz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>serial</build_depend>
  <build_export_depend>serial</build_export_depend>
  <exec_depend>serial</exec_depend>

  <build_depend>four_wheel_msgs</build_depend>
  <build_export_depend>four_wheel_msgs</build_export_depend>
  <exec_depend>four_wheel_msgs</exec_depend>

  <export>

  </export>
</package>
