<?xml version="1.0"?>
<package format="2">
  <name>four_wheel_drive_msgs</name>
  <version>1.0.0</version>
  <description>The four_wheel_drive_msgs package</description>

  <maintainer email="zhz@zkwl.com">zhz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msg</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
